# langgraph-ollama-tutorial

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-library.md  bug-website.md  feature-request.md  tutorial-request.md
.github/workflows/: deploy-docs.yml
docs/: 01-chatbot-basics.md  02-tool-calling.md  03-memory-persistence.md  04-human-in-the-loop.md  05-reflection.md  06-plan-and-execute.md  07-research-assistant.md
docs/advanced_reasoning/: 21-plan-and-execute.md  22-reflection.md  23-reflexion.md  24-lats.md  25-rewoo.md
docs/core_patterns/: 01-chatbot-basics.md  02-tool-calling.md  03-memory-persistence.md  04-human-in-the-loop.md  05-reflection.md  06-plan-and-execute.md  07-research-assistant.md
docs/multi_agent_patterns/: 14-multi-agent-collaboration.md  15-hierarchical-teams.md  16-subgraphs.md  17-agent-handoffs.md  18-agent-swarm.md  19-map-reduce-agents.md  20-multi-agent-evaluation.md
docs/rag_patterns/: 08-basic-rag.md  09-self-rag.md  10-crag.md  11-adaptive-rag.md  12-agentic-rag.md  13-perplexity-clone.md
examples/: 07_research_assistant.ipynb
examples/advanced_reasoning/: 24_lats.ipynb  25_rewoo.ipynb
examples/core_patterns/: 02_tool_calling.ipynb  03_memory_persistence.ipynb  04_human_in_the_loop.ipynb  05_reflection.ipynb  06_plan_and_execute.ipynb
examples/multi_agent_patterns/: 17_agent_handoffs.ipynb  18_agent_swarm.ipynb  19_map_reduce_agents.ipynb  20_multi_agent_evaluation.ipynb
examples/rag_patterns/: 08_basic_rag.ipynb  09_self_rag.ipynb  13_perplexity_clone.ipynb
langgraph_ollama_local/: __init__.py  cli.py  config.py
langgraph_ollama_local/agents/: __init__.py  hierarchical.py  multi_agent.py
langgraph_ollama_local/memory/: __init__.py
langgraph_ollama_local/patterns/: __init__.py  evaluation.py  handoffs.py  lats.py  map_reduce.py  plan_execute.py  reflection.py  reflexion.py  rewoo.py  subgraphs.py  swarm.py
langgraph_ollama_local/rag/: __init__.py  document_loader.py  embeddings.py  graders.py  indexer.py  retriever.py
langgraph_ollama_local/streaming/: __init__.py
scripts/: generate_diagrams.py  test_notebooks.py
tests/: __init__.py  conftest.py  test_config.py  test_evaluation.py  test_handoffs.py  test_lats.py  test_map_reduce.py  test_multi_agent.py  test_notebooks.py  test_plan_execute.py  test_rag.py  test_rag_edge_cases.py  test_reflection.py  test_reflexion.py  test_rewoo.py  test_swarm.py  test_tutorials.py
tests/integration/: test_extended.py  test_ollama_connection.py  test_rag_integration.py
website/: blog.md  index.md  package-lock.json  package.json  progress.md
website/.vitepress/: config.mts
website/.vitepress/theme/: custom.css  index.ts
website/.vitepress/theme/components/: ARCHITECTURE.md  CHANGELOG.md  CodePlayground.vue  PhaseProgress.vue  ProgressTracker.vue  QUIZ_ENHANCEMENT_SUMMARY.md  QUIZ_QUICK_REFERENCE.md  Quiz.vue  QuizDashboard.vue  QuizExamples.md  TutorialCard.vue
website/api/: agents.md  configuration.md  index.md  patterns.md  rag.md  types.md
website/jupyterlite/: .jupyterlite.doit.db  build.sh  jupyter-lite.json  requirements.txt
website/playground/: index.md  notebooks.md  visualizer.md
website/public/notebooks/: jupyter-lite.json
website/public/notebooks/api/contents/: all.json
website/public/notebooks/files/: 01_chatbot_basics.ipynb  10_crag.ipynb  11_adaptive_rag.ipynb  12_agentic_rag.ipynb  14_multi_agent_collaboration.ipynb  15_hierarchical_teams.ipynb  16_subgraphs.ipynb  21_plan_and_execute.ipynb  22_reflection.ipynb  23_reflexion.ipynb
website/tutorials/: index.md  setup.md
website/tutorials/advanced/: 21-plan-and-execute.md  22-reflection.md  23-reflexion.md  24-lats.md  25-rewoo.md
website/tutorials/core/: 01-chatbot-basics.md  02-tool-calling.md  03-memory-persistence.md  04-human-in-the-loop.md  05-reflection.md  06-plan-and-execute.md  07-research-assistant.md
website/tutorials/multi-agent/: 14-multi-agent-collaboration.md  15-hierarchical-teams.md  16-subgraphs.md  17-agent-handoffs.md  18-agent-swarm.md  19-map-reduce-agents.md  20-multi-agent-evaluation.md
website/tutorials/rag/: 08-basic-rag.md  09-self-rag.md  10-crag.md  11-adaptive-rag.md  12-agentic-rag.md  13-perplexity-clone.md
